# bazzite-mcp

./: ARCHITECTURE.md  CLAUDE.md  LICENSE  PLAN.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
contrib/systemd/: bazzite-mcp-refresh.service  bazzite-mcp-refresh.timer
docs/: architecture.md  improvement-plan.md
docs/plans/: 2026-03-03-bazzite-mcp-design.md  2026-03-03-bazzite-mcp-implementation.md  2026-03-03-competitive-analysis-and-roadmap.md  2026-03-03-gaming-toolkit-design.md  2026-03-03-gaming-toolkit-implementation.md  2026-03-03-product-growth-design.md  2026-03-04-screenshot-tool-design.md  2026-03-04-snapshot-backup-design.md  2026-03-05-desktop-control-v2-design.md  2026-03-05-desktop-control-v2-plan.md  2026-03-05-fix-assessment-issues.md  2026-03-05-portal-desktop-control-design.md  2026-03-05-portal-desktop-control-plan.md
skills/bazzite-operator/: SKILL.md
src/bazzite_mcp/: __main__.py  audit.py  cleanup.py  (+13 more)
tests/: test_audit.py  test_cli_entrypoint.py  test_config.py  test_db.py  test_docs_cache.py  test_embeddings.py  test_guardrails.py  test_kwin_screenshot.py  test_portal.py  test_resources.py  test_runner.py  test_screen_geometry.py  test_security.py  test_server.py  test_tool_registration.py  test_tools_audit.py  test_tools_containers.py  test_tools_desktop.py  test_tools_docs.py  test_tools_gaming.py  test_tools_packages.py  test_tools_self_improve.py  test_tools_services.py  test_tools_settings.py  test_tools_system.py  test_tools_ujust.py  test_tools_virtualization.py
(+57 files in other folders)
