[project]
name = "bazzite-mcp"
version = "0.1.0"
description = "MCP server providing AI-native awareness and control of Bazzite OS"
readme = "README.md"
authors = [
    { name = "Roland", email = "rmargve@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "vdf>=3.4",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
